--- a/requirements_cpu.txt
+++ b/requirements_cpu.txt
@@ -1,1 +1,53 @@
 jupyterlab==4.5.0
+cmake==4.1.2
+ninja==1.13.0
+numpy==2.3.4
+pillow==11.3.0
+torch==2.9.1
+torchaudio==2.9.1
+torchelastic==0.2.2	
+torchvision==0.24.1
+tqdm==4.67.1
+
+archspec==0.2.5
+asttokens==3.0.0
+boltons==25.0.0	
+Brotli==1.2.0	
+build==1.3.0	
+certifi==2025.10.5
+chardet==5.2.0
+click==8.3.0
+colorama==0.4.6
+distro==1.9.0
+evalidate==2.0.5
+expecttest==0.3.0
+frozendict==2.4.6
+h2==4.3.0	
+hpack==4.1.0
+hyperframe==6.1.0	
+hypothesis==6.147.0
+jsonpatch==1.33
+libarchive-c==5.3	
+# libmambapy==2.3.3	
+lief==0.16.6	
+lintrunner==0.12.7
+# menuinst==2.4.1
+msgpack==1.1.2
+networkx==3.5
+optree==0.17.0
+pkginfo==1.12.1.2
+pluggy==1.6.0
+pycosat==0.6.6	
+pycparser==2.22
+pyproject_hooks==1.2.0	
+PySocks==1.7.1
+pytz==2025.2
+rpds-py==0.28.0
+ruamel.yaml==0.18.16	
+ruamel.yaml.clib==0.2.14
+sortedcontainers==2.4.0
+triton==3.5.1	
+truststore==0.10.3
+uv==0.9.9
+wheel==0.45.1	
+zstandard==0.25.0
