--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -23,4 +23,4 @@ RUN wget --no-check-certificate https://www.python.org/ftp/python/${PYTHON_VERSI
 RUN pip install -U pip && pip install -r /work/requirements.txt
 
 # 不要なパッケージは削除
-RUN apt autoremove -y
+RUN apt autoremove -y && cd /work && rm -rf Python-${PYTHON_VERSION}.tgz Python-${PYTHON_VERSION}
