--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
               capabilities: [gpu]
     ports:
         - 8888:8888
+    environment:
+      - SHELL=/bin/bash
     entrypoint: jupyter lab --ip 0.0.0.0 --port=8888 --no-browser --allow-root --ServerApp.token='' --ServerApp.password=''
     profiles: ["gpu"]
 
@@ -35,5 +37,7 @@ services:
       - ./data:/data
     ports:
         - 8888:8888
+    environment:
+      - SHELL=/bin/bash
     entrypoint: jupyter lab --ip 0.0.0.0 --port=8888 --no-browser --allow-root --ServerApp.token='' --ServerApp.password=''
     profiles: ["cpu"]
