--- a/requirements_cpu.txt
+++ b/requirements_cpu.txt
@@ -1,5 +1,6 @@
 jupyterlab==4.5.0
 cmake==4.1.2
+matplotlib==3.10.7
 ninja==1.13.0
 numpy==2.3.4
 pillow==11.3.0
@@ -26,6 +27,7 @@ h2==4.3.0
 hpack==4.1.0
 hyperframe==6.1.0	
 hypothesis==6.147.0
+japanize-matplotlib==1.1.3
 jsonpatch==1.33
 libarchive-c==5.3	
 # libmambapy==2.3.3	
